--- a/pages/nf4514/n12546734.md
+++ b/pages/nf4514/n12546734.md
@@ -122,7 +122,7 @@
  。
 </p>
 <h3>
- 密歇根州法官否认对选举欺诈诉讼的审计请求
+ 密歇根州法官拒绝对选举欺诈诉讼的审计请求
 </h3>
 <p>
  周五，密歇根州的一名法官拒绝了要求阻止选举认证并下令对结果进行审核的诉讼请求，该诉讼指控密歇根州涉嫌选票诈欺。
