--- a/pages/p6/952210.md
+++ b/pages/p6/952210.md
@@ -1,4 +1,4 @@
-### 中国也发制裁清单是虚张声势还是放大招？(图)
+### 罗斯福被共谍欺骗 致苏联侵占中国和日本权益(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img src="https://img2.secretchina.com/pic/2019/1-8/p2338142a503136218-ss.jpg"/>
+  <img alt="1945年2月，美英苏三国首脑罗斯福（中）、丘吉尔、斯大林在苏联秘密签订“雅尔塔协定”" src="https://img2.secretchina.com/pic/2018/6-14/p2192071a23791280-ss.jpg" style="height:340px; width:600px"/>
   <br>
-   2018年10月12日，一辆卡车在中国山东省青岛的一个港口运输集装箱。（图片来源：STR/AFP/Getty Images）
+   1945年2月，罗斯福（中）、丘吉尔、斯大林在苏联出席雅尔塔会议，签订“雅尔塔密约”。（图片来源：维基百科）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,45 +21,54 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月22日讯】中国
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/商务部" target="_blank">
-    商务部
-   </span>
-  </strong>
-  9月19日发布了针对外国实体的《
-  <strong>
-   不可靠实体清单
-  </strong>
-  规定》，宣布即日起将对清单上的企业进行惩罚和限制，但并没有给出清单细节。部分美国专家认为，中国是在虚张声势。
+  日本历史学者根据解密的二战资料指出，战后日本之所以未能收回“北方领土”（俄称南千岛群岛），原因是当时美国总统
+  <span href="https://www.secretchina.com/news/gb/tag/罗斯福" target="_blank">
+   罗斯福
+  </span>
+  身边存在重量级的“苏联间谍”，导致总统没有阅读到国务院的重要参考文件，使“原属于日本的北方领土”被拱手让给了苏联。这一“重量级间谍”就是当时担任罗斯福总统顾问的阿尔杰･希斯，其伪证案在上世纪40年代末曾震惊美国。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  中国是在去年5月首次宣布将发布这个清单的。清单针对中国所谓“违反正常的市场交易原则，中断与中国企业、其他组织或者个人的正常交易，或者对中国企业、其他组织或者个人采取歧视性措施，严重损害中国企业、其他组织或者个人合法权益的外国公司和个人”。
+  日本杂志报导说，根据早稻田大学教授有马哲夫的研究，美国国务院官员阿尔杰･
+  <span href="https://www.secretchina.com/news/gb/tag/希斯" target="_blank">
+   希斯
+  </span>
+  在北方四岛被苏联占有的过程中扮演了重要角色。“他欺骗了罗斯福总统，将日本的领土转让给苏联”。根据有马的研究，希斯在上世纪30年代时就与苏联政府频繁来往，“以美国政府官员的身份行间谍之实”。
+ </p>
+ <p style="text-align:center">
+  <img alt="被控苏联共产党间谍的阿尔杰･希斯" src="https://img2.secretchina.com/pic/2018/6-14/p2192072a659848179-ss.jpg" style="height:316px; width:600px"/>
+  <br>
+   被控苏联共产党间谍的阿尔杰･希斯。（网络图片）
+  </br>
  </p>
  <p>
-  中国商务部的网站称，这个清单是“为了维护国家主权、安全、发展利益，维护公平、自由的国际经贸秩序，保护中国企业、其他组织或者个人的合法权益”。
+  阿尔杰･希斯1936年进入美国国务院，1944年就任国务院特殊问题政治局局长。1945年2月，他以顾问身份陪同罗斯福总统，出席在苏联举行的美英苏三国首脑会议——
+  <span href="https://www.secretchina.com/news/gb/tag/雅尔塔会议" target="_blank">
+   雅尔塔会议
+  </span>
+  。
  </p>
  <p>
-  被列入该清单的企业和个人可能会被限制或者禁止从事与中国有关的进出口活动、在中国境内投资、出入境或面临罚款。
- </p>
- <p>
-  但是，中国没有给出具体的清单，也没有具体说明发布时间表。一些美国专家认为，中国这种做法目前没有实际后果。
+  在雅尔塔会议上，美国总统罗斯福、英国首相丘吉尔和苏联斯大林制定了第二次世界大战战后的世界新秩序和列强利益分配方针，形成了“雅尔塔体系”，对第二次世界大战后的世界局势产生了深远的影响。
  </p>
  <p>
   <strong>
-   穆恩：中国声明含糊意在安抚国内反制呼声
+   许多人批评雅尔塔会议，使苏联及各国共产党得以控制中欧、东欧以及亚洲许多国家。罗斯福和丘吉尔为争取苏联红军对日本宣战，向斯大林妥协，未尊重
+   <span href="https://www.secretchina.com/news/gb/tag/蒋介石" target="_blank">
+    蒋介石
+   </span>
+   中华民国的意愿，会议部分内容侵犯损害蒋介石中华民国权益甚大。
   </strong>
  </p>
  <center>
@@ -75,11 +84,7 @@
   </div>
  </center>
  <p>
-  曾在奥巴马政府时期担任负责中国事务的助理美国贸易代表穆恩（Jeff Moon）告诉美国之音：“不可靠
-  <span href="https://www.secretchina.com/news/gb/tag/实体清单" target="_blank">
-   实体清单
-  </span>
-  如果实施，将使中国长期以来使用法外威胁和措施报复外国公司的做法正式化。目前中国的声明非常含糊，避免对外国公司产生任何直接后果，但这提醒美国政府和公司，中国有意图采取报复行动。这种做法避免了在美国大选前制造更多紧张局势，同时回应中国国内的呼吁。”
+  虽然无法确定雅尔塔会议开始前和会议期间，阿尔杰･希斯给予了斯大林多少一手情报。但是可以确定的是，苏联在雅尔塔会议上处处得到先机，而且似乎美国的底牌都很清楚，雅尔塔会议对苏联来说占尽优势。在雅尔塔会议上，美苏通过密约形式，确认苏联战后获得日本千岛列岛，并让斯大林苏联出兵中国东北并占据瓜分中国的权利，这直接严重损害了蒋介石中华民国的权利。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -94,11 +99,7 @@
   </div>
  </center>
  <p>
-  就在该清单发布前一天，美国商务部发表公告称将禁止下载
-  <span href="https://www.secretchina.com/news/gb/tag/微信" target="_blank">
-   微信
-  </span>
-  国际版及TikTok这两款移动应用，这两个平台上的交易活动也在禁令覆盖范围之内，所以该清单被视为中国政府对美国政府一系列制裁的报复。但中国商务部在一次新闻发布会上说，中国无意针对任何特定国家或实体。
+  至于北方四岛，美国国务院内部认为，南千岛群岛由于历史与原居民民族关系，不应被列入转交给苏联的领土范围。并据此向总统提交了建议书。根据事后调查，罗斯福并未阅读到该建议书，而是采纳了希斯的建议，将南千岛群岛作为北海道的一部分“整体移交给苏联”。这也成为日苏领土争端的根源。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +114,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   史剑道：中国清单是虚张声势
-  </strong>
+  希斯的间谍行为一直都没有被美国察觉，直到在“麦卡锡运动”中被指控为共产党分子和苏联间谍。1948年8月，《时代》周刊编辑、前美国共产党员惠特克･钱伯斯（Whittaker Chambers）向美国政府举报阿尔杰･希斯，称希斯企图在政府机关内安插共产党员及其同情者，并向苏联提供国务院机密。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,11 +129,7 @@
   </div>
  </center>
  <p>
-  美国企业研究所(American Enterprise Institute)资深研究员、经济和贸易专家史剑道(Derek Scissors)认为，这个清单是虚张声势，因为目前美国对中国企业的限制也是雷声大雨点小，例如，美国对美国公司向
-  <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-   华为
-  </span>
-  的销售限制只停留在要求这些美国公司必须获得相关销售许可证，这种限制不值得中国进行代价高昂的报复。
+  当时的《时代周刊》刊登了这个世纪新闻，因为涉及到核心人物，一时之间全美国都沸腾了。舆论分成了两派，一派认为认为阿尔杰･希斯就是苏联共产党的间谍，要求严惩；另一派则宣称他是无辜的，是被共和党政客和苏联特工给陷害了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -153,11 +148,7 @@
   </ins>
  </center>
  <p>
-  他告诉美国之音：“美国企业是中国在
-  <span href="https://www.secretchina.com/news/gb/tag/贸易战" target="_blank">
-   贸易战
-  </span>
-  中最大的盟友，采取报复等于是对中国自己的朋友进行报复。中国会等到美国大选结束后对中国的政策发生改变再采取行动。”
+  美国法庭拿阿尔杰･希斯很无奈，因为共和党人提交的指控材料（文件、微缩胶片、打字机）是1938年之前的，美国法律规定间谍罪的追诉时效只有10年。换句话说，这些证据无法定他的罪。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -172,9 +163,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   芮恩希：中国想报复又怕伤害自身
-  </strong>
+  美国政府并不甘心，以伪证罪判处希斯5年有期徒刑。希斯在监狱中仅服了4年零8个月刑，被提前释放。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -189,22 +178,7 @@
   </div>
  </center>
  <p>
-  但前美国贸易官员、战略与国际研究中心(Center for Strategic and International Studies)贸易专家芮恩希(William Reinsch)却认为，中国一定会对美国进行报复，但他们非常谨慎，需要时间考虑如何在报复的同时不伤害到自己。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  他告诉美国之音：“中国将朝着与我们分离的方向发展，不是因为我们对它们做了什么，而是因为他们为了自己的利益而斗争。但他们认识到，短期内，这对他们来说是非常困难的，而且代价很高，因为他们在高科技领域很依赖美国。他们想朝这个方向前进，但不想这么快，因为怕最终削弱自己的高科技产业。”
+  阿尔杰･希斯间谍一案，凸显了第二次世界大战前后共产党对美国政府的渗透和破坏。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -236,7 +210,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -268,13 +242,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946856.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946856.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/946856.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/22/946856.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/952210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/952210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/952210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/14/952210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/946856.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p6/952210.md' width='0px' height='0px'/>
