--- a/pages/nsc412/n12549021.md
+++ b/pages/nsc412/n12549021.md
@@ -7,7 +7,7 @@
 
 <div><img alt="【大选更新11·14】川粉：有史以来最好总统" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/000_8V87G9-600x400.jpg"/>
 <div class="caption">
- 11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 （Olivier DOULIERY / AFP）
+ 11月14日上午，川普总统的车队穿过华盛顿DC支持者的集会。 (Olivier DOULIERY / AFP)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
